Fixed the alignment of some of the UI elements to make things a bit cleaner.

--- a/WebContent/VAADIN/themes/composer/composer.scss
+++ b/WebContent/VAADIN/themes/composer/composer.scss
@@ -11,8 +11,6 @@
 	#treeScrollableArea
 	{
 		border: 1px solid;
-		
-		
 		margin-right: 20px;
 	}
 	
@@ -42,7 +40,7 @@
 	#templateSearch
 	{
 		margin-right: 25px;
-		margin-bottom: 15px;
+		margin-bottom: 17px;
 	}
 	
 	#templateTree
@@ -73,5 +71,6 @@
 	{
 		margin-right: 15px;
 		margin-bottom: 15px;
+		
 	}
 }
